Add getPostByPage
